# data-lake-minio

./: .gitignore  Dockerfile  Dockerfile_airflow  Makefile  docker-compose.yaml  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: brewery_pipeline_dag.py
migrations/commons/: api_connector.py
migrations/sources/: breweries.py
migrations/tests/: tests_api_connector.py
minio-lake/.minio.sys/: format.json
minio-lake/.minio.sys/tmp/.trash/0414548d-687c-45d2-bdea-390d39b35085/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/0ef5ee6a-b571-4132-b6c6-fdc02f5fb355/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/18c79cf4-bd45-4725-83d4-e3824c4c73ef/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/1d2078b9-12d6-482d-8730-df2cf20f3a66/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/33dfe2a0-6b15-4d43-b36d-b98cb4ce5513/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/45052b87-331a-41e4-9869-a4d700427f6d/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/4861d27b-39fd-4cfd-99bd-9c0d023c2cc6/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/5192f66a-3814-4407-9fae-b7e198c4320b/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/69848e47-9592-42b7-b133-5fb94109c210/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/71c1ea78-5854-4797-a7d5-7a261cccbf7c/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/77eeaec2-5f21-4ed6-bcb7-9af89da8b715/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/8ef9772c-f693-465f-b07d-93dff1efd086/: xl.meta.bkp
minio-lake/.minio.sys/tmp/.trash/9bc41208-cdd3-40a9-90b0-6da611356f57/: xl.meta.bkp
(+11 files in other folders)
