[project]
name = "desafio-bees"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
